Rewrite with @effect-atom/atom-react

--- a/apps/frontend/src/styles.scss
+++ b/apps/frontend/src/styles.scss
@@ -13,3 +13,10 @@
     position: absolute;
     white-space: nowrap;
 }
+
+.spinner {
+    position: absolute;
+    inset: 0;
+    z-index: 100;
+    cursor: wait;
+}
